# hit-the-bucket

./: .gitignore  CMakeLists.txt  README.md  boardsquare.cpp  install.sh  main.cpp  menu.h  restart.sh  run.sh  statki.cpp  statki.ui
Statki/: CMakeLists.txt  Statki.pro  Statki.pro.user.4.10-pre1  boardsquare.h  main.cpp  menu.cpp  menu.h  menu.ui  ocean.cpp  ocean.h  statki.cpp  statki.h  statki.ui
Statki/tests/: test_01.cpp
assets/images/: statek.psd  statki.psd  tornado.psd
build-Statki-Desktop_Qt_5_13_0_GCC_64bit-Debug/: Makefile  Statki  moc_boardsquare.cpp  moc_menu.cpp  moc_ocean.cpp  moc_statki.cpp  ui_menu.h  ui_statki.h
statki_server/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h  statki_server.pro
